infrastructure/kubernetes/product/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # prometheus.io/port: "9090"
  # prometheus.io/path: "/metrics"
  # prometheus.io/scrape: "true"
  name: product-deployment
  labels:
    app: product
  namespace: product-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: mekniwassime/devops_project:product-a14c4e34ed61d898450dd61c4e55cca71273929f
        ports:
        - containerPort: 80
