infrastructure/kubernetes/product/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: product-ns
spec:
  ingressClassName: nginx
  rules:
    - host: www.devops-project.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: product-svc
                port:
                  number: 80
            path: /product/
